test/negative/invariant1.mli
type t = { a : int } (*@ invariant a >= 0 *)
